--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
   <url>http://www.example.com</url>
 
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
     <netty-all.version>4.1.6.Final</netty-all.version>
     <lombok.version>1.16.12</lombok.version>
     <fastjson.version>1.2.29</fastjson.version>
